# kp_research

./: .coverage  .coveragerc  .gitignore  README.md  generate_report.py  logging_utils.py  preprocess.py  pyproject.toml  requirements.txt  run.py  run_cv.py  run_cv_nn.py  run_exp.sh  run_hld.py  run_hld_nn.py  run_nn.py  run_reg.py  run_utils.py  tf_env_kp.yml  tst.py  utils.py  utils_nn.py  vars_cv.json  vars_nn.json
.git_hooks/: .coverage  pre-commit
cov_utils/: get_coverage.py
helpers/: logging_utils.py  utils.py
notebooks/: .gitignore  EDA.ipynb  Report.ipynb  Report24.ipynb  Report_lags8.ipynb  Report_no_lags.ipynb  Untitled1.ipynb
scripts/helpers/: logging_utils.py  utils.py  utils_nn.py  yaml_utils.py
scripts/models/: __init__.py  _models.py  column_estimator.py  factory.py  model_factory.py  model_sklearn.py  models.py
scripts/pipeline/: data_pipe.py  preprocess.py
scripts/report/: generate_report.py
scripts/tests/: test_all_models.py  test_column_estimator.py  test_data_pipe.py  test_logging_utils.py  test_model_factory.py  test_model_sklearn.py  test_models.py  test_preprocess.py  test_report.py  test_utils.py  test_yaml_utils.py
tests/: test_utils.py
vars/: vars.json  vars.yaml  vars_cv.json  vars_cv_nn.json  vars_cv_nn.yaml  vars_hld.json  vars_hld.yaml  vars_hld_nn.json  vars_hld_nn.yaml  vars_nn.json  vars_nn.yaml  vars_run.yaml  vars_run_cv.yaml  vars_run_cv_nn.yaml  vars_run_hld.yaml  vars_run_hld_nn.yaml  vars_run_nn.yaml  vars_run_reg.yaml
vars/common/: common.yaml  common_nn.yaml  common_reg.yaml
(+21 files in other folders)
